{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 94,
  "lineage": "3584d721-89f4-7f91-84d6-aa8da2479217",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:378360623446:loadbalancer/my-elb",
            "availability_zones": [
              "us-west-1a",
              "us-west-1c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "my-elb-672597269.us-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-elb",
            "security_groups": [
              "sg-0996d198bcacde3cd"
            ],
            "source_security_group": "378360623446/allow-http",
            "source_security_group_id": "sg-0996d198bcacde3cd",
            "subnets": [
              "subnet-06dd427b05426f927",
              "subnet-088a5044f9b00b366"
            ],
            "tags": {
              "Name": "my-elb"
            },
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.main_public_1",
            "aws_subnet.main_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05eb49fb0d743adb9",
            "owner_id": "378360623446",
            "tags": {
              "Name": "ig-main"
            },
            "vpc_id": "vpc-0d6a83cf001563284"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ig_route_main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d5cb6d603a9037f8",
            "owner_id": "378360623446",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05eb49fb0d743adb9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0d6a83cf001563284"
          },
          "dependencies": [
            "aws_internet_gateway.ig_main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ig_route_table_associate_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c5da6d50105672c",
            "route_table_id": "rtb-0d5cb6d603a9037f8",
            "subnet_id": "subnet-06dd427b05426f927"
          },
          "dependencies": [
            "aws_internet_gateway.ig_main",
            "aws_route_table.ig_route_main",
            "aws_subnet.main_public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ig_route_table_associate_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065190343bb5cdcdf",
            "route_table_id": "rtb-0d5cb6d603a9037f8",
            "subnet_id": "subnet-088a5044f9b00b366"
          },
          "dependencies": [
            "aws_internet_gateway.ig_main",
            "aws_route_table.ig_route_main",
            "aws_subnet.main_public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:security-group/sg-0996d198bcacde3cd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0996d198bcacde3cd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http",
            "name_prefix": null,
            "owner_id": "378360623446",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0d6a83cf001563284"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:security-group/sg-0eb9c06ac8cec8ed2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb9c06ac8cec8ed2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "378360623446",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0d6a83cf001563284"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:subnet/subnet-06dd427b05426f927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06dd427b05426f927",
            "map_public_ip_on_launch": true,
            "owner_id": "378360623446",
            "tags": {
              "Name": "vpc-main-public-1"
            },
            "vpc_id": "vpc-0d6a83cf001563284"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main_public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:subnet/subnet-088a5044f9b00b366",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-088a5044f9b00b366",
            "map_public_ip_on_launch": true,
            "owner_id": "378360623446",
            "tags": {
              "Name": "vpc-main-public-2"
            },
            "vpc_id": "vpc-0d6a83cf001563284"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:378360623446:vpc/vpc-0d6a83cf001563284",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004ecadde23e17d8a",
            "default_route_table_id": "rtb-035704af39f3958b6",
            "default_security_group_id": "sg-059baa9318bfeed58",
            "dhcp_options_id": "dopt-6d24340a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d6a83cf001563284",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-035704af39f3958b6",
            "owner_id": "378360623446",
            "tags": {
              "Name": "vpc-main"
            }
          }
        }
      ]
    }
  ]
}